--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/swagger": "^11.2.0",
     "@supabase/supabase-js": "^2.49.8",
     "axios": "^1.9.0",
+    "ethers": "^6.14.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
